@startuml
class Tema {
    - nome: String
    - fundo: String
    - texto: String
    - botao_fundo: String
    - botao_texto: String
}

class RelogioDigital {
    - tema: Tema
    - master: Tk
    - label_relogio: Label
    - label_data: Label

    + __init__(master, tema)
    + atualizar_horario()
    + aplicar_tema(novo_tema: Tema)
}

class GerenciadorTemas {
    - temas: Map<String, Tema>
    - tema_atual: String

    + __init__()
    + obter_tema(nome: String): Tema
    + alternar_tema(): Tema
}

class BotaoTema {
    - gerenciador: GerenciadorTemas
    - callback: Callback
    - tema: Tema

    + __init__(master, gerenciador, callback)
    + atualizar_aparencia(tema: Tema)
}

class RelogioApp {
    - janela: Tk
    - gerenciador_temas: GerenciadorTemas
    - container: Frame
    - relogio: RelogioDigital
    - botao_tema: BotaoTema

    + __init__(janela)
    + criar_widgets()
    + alternar_tema()
}

RelogioDigital *-- Tema
GerenciadorTemas *-- Tema
BotaoTema *-- GerenciadorTemas
RelogioApp *-- RelogioDigital
RelogioApp *-- BotaoTema
RelogioApp *-- GerenciadorTemas

@enduml